fix tablet subcribe success spacing

--- a/wp-content/themes/sixgill/css/custom_2016.css
+++ b/wp-content/themes/sixgill/css/custom_2016.css
@@ -437,7 +437,7 @@ all classes apply for desktop
 	}
 
 	.subscribe-block-tablet-mobile {
-		padding: 55px 60px 20px 98px;
+		padding: 40px 60px 20px 98px;
 		margin: 0px auto;
 		height: 195px;
 		width: 100%;
